test: Adding HotelService tests